platform/research/jupyterhub/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: research
  labels:
    pod-security.kubernetes.io/enforce: privileged
